--- a/app.css
+++ b/app.css
@@ -44,10 +44,15 @@ h2 {
     margin: 0;
     transform: rotate(-45deg);
     text-shadow: 0 0 5px #01579b;
+    transition: transform 0.5s;
 }
 
 #florida {
     background-color: #03a9f4;
+}
+
+.destination:hover h2 {
+    transform: rotate(0deg);
 }
 
 #paris {
